New Depsgraph - Camera constraint is not evaluated properly #51907

Closed
opened 2017-06-27 07:19:41 +02:00 by Carlo Andreacchio · 10 comments

Sorry Sergey!! This is again for the new depsgraph

#49981 is the last one I reported

  1. open attached blend file
  2. scrub (works fine)
  3. click on the scene tab -> change active camera to Camera.000
  4. scrub
  5. notice how its not moving
  6. enable layer 2
  7. scrub.
  8. notice how it is moving

depsgraphBug1.blend

Sorry Sergey!! This is again for the new depsgraph #49981 is the last one I reported 1. open attached blend file 2. scrub (works fine) 3. click on the scene tab -> change active camera to Camera.000 4. scrub 5. notice how its not moving 6. enable layer 2 7. scrub. 8. notice how it is moving [depsgraphBug1.blend](https://archive.blender.org/developer/F643896/depsgraphBug1.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @candreacchio

Added subscriber: @candreacchio

#52085 was marked as duplicate of this issue

#52085 was marked as duplicate of this issue

Added subscriber: @Sergey

Added subscriber: @Sergey
@Sergey

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Sergey Sharybin was assigned by Dalai Felinto 2017-06-27 11:19:42 +02:00

Confirmed (need to run with --enable-new-depsgraph).

Confirmed (need to run with --enable-new-depsgraph).

Hey just a soft poke on this bug, its been around for the past 2 weeks since being confirmed.

Hey just a soft poke on this bug, its been around for the past 2 weeks since being confirmed.

This issue was referenced by a679457263

This issue was referenced by a679457263b529e4536460c9cfb4a1c11e93e8ae

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51907
No description provided.