Fix T51907: New Depsgraph - Camera constraint is not evaluated properly

This is more a workaround for until we've got proper visibility flush, which
will likely happen in blender2.8 branch.